new file:   .idea/encodings.xml 	modified:   .idea/gradle.xml 	new file:   .idea/libraries/android_android_22.xml 	new file:   .idea/libraries/android_android_23.xml 	new file:   .idea/libraries/appcompat_v7_23_1_1.xml 	new file:   .idea/libraries/butterknife_7_0_1.xml 	new file:   .idea/libraries/design_23_1_1.xml 	new file:   .idea/libraries/okhttp_2_7_0.xml 	new file:   .idea/libraries/okio_1_6_0.xml 	new file:   .idea/libraries/play_services_appindexing_8_1_0.xml 	new file:   .idea/libraries/play_services_basement_8_1_0.xml 	new file:   .idea/libraries/recyclerview_v7_23_1_1.xml 	new file:   .idea/libraries/support_annotations_23_1_1.xml 	new file:   .idea/libraries/support_v4_23_1_1.xml 	modified:   .idea/misc.xml 	modified:   .idea/modules.xml 	modified:   .idea/workspace.xml 	modified:   MedLL.iml 	modified:   app/app.iml 	modified:   app/build.gradle 	modified:   app/src/main/AndroidManifest.xml 	new file:   app/src/main/java/softdev1/medll/BitmapLruCache.java 	modified:   app/src/main/java/softdev1/medll/Child.java 	deleted:    app/src/main/java/softdev1/medll/ExpandableListAdapter.java 	modified:   app/src/main/java/softdev1/medll/ExpandableListApplication.java 	modified:   app/src/main/java/softdev1/medll/JSONData.java 	modified:   app/src/main/java/softdev1/medll/Leitlinie.java 	modified:   app/src/main/java/softdev1/medll/LeitlinieMain.java 	new file:   app/src/main/java/softdev1/medll/NLevelAdapter.java 	new file:   app/src/main/java/softdev1/medll/NLevelItem.java 	new file:   app/src/main/java/softdev1/medll/NLevelListItem.java 	new file:   app/src/main/java/softdev1/medll/NLevelView.java 	modified:   app/src/main/res/layout/activity_leitlinie_main.xml 	modified:   app/src/main/res/layout/expandable_list_group.xml 	modified:   app/src/main/res/layout/expandable_list_textitem.xml 	modified:   settings.gradle

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,11 +16,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-<<<<<<< HEAD
+        android:name="softdev1.medll.ExpandableListApplication"
         android:theme="@style/AppTheme">
-=======
-        android:theme="@style/AppTheme" >
->>>>>>> 04581527e28b284deb14f4ba5b5e47b61fbd4dcb
         <activity
             android:name=".LeitlinieMain"
             android:label="@string/app_name"
@@ -32,15 +29,6 @@
             </intent-filter>
         </activity>
         <activity
-<<<<<<< HEAD
-            android:name=".ExpandableListApplication"
-            android:parentActivityName=".LeitlinieMain"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"
-        ></activity>
-        <activity
-=======
->>>>>>> 04581527e28b284deb14f4ba5b5e47b61fbd4dcb
             android:name=".ToolsActivity"
             android:label="@string/title_activity_tools"
             android:parentActivityName=".LeitlinieMain"
@@ -49,15 +37,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="softdev1.medll.LeitlinieMain" />
         </activity>
-<<<<<<< HEAD
 
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
              App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-=======
->>>>>>> 04581527e28b284deb14f4ba5b5e47b61fbd4dcb
     </application>
 
 </manifest>
