--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,6 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.squareup.okhttp:okhttp:2.7.0'
     compile 'com.jakewharton:butterknife:7.0.1'
-    compile project(':volley')
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
-
+    compile 'com.android.volley:volley:1.0.0'
 }
