--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.android.gms:play-services-appindexing:8.1.0'
     compile 'com.android.volley:volley:1.0.0'
+    compile files('src/libs/universal-image-loader-1.9.5.jar')
 }
